fix : syntax changes for JDK 11 compatibility